--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,10 +16,16 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2020",
+    "target": "ES2022",
     "module": "es2020",
-    "lib": ["es2020", "dom"],
-    "types": ["googlemaps"]
+    "lib": [
+      "es2020",
+      "dom"
+    ],
+    "types": [
+      "googlemaps"
+    ],
+    "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
