--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/platform-browser-dynamic": "^15.2.10",
     "@angular/router": "^15.2.10",
     "@nebular/eva-icons": "9.0.0",
-    "@nebular/theme": "^12.0.0",
+    "@nebular/theme": "^9.0.0",
     "@ng-bootstrap/ng-bootstrap": "^11.0.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
@@ -59,6 +59,6 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.8.4"
+    "typescript": "^4.9.3"
   }
 }
