--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.2.10",
+    "@angular/animations": "^16.2.12",
     "@angular/cdk": "^13.2.0",
-    "@angular/common": "^15.2.10",
+    "@angular/common": "^16.2.12",
     "@angular/compiler": "^15.2.10",
     "@angular/core": "^15.2.10",
     "@angular/flex-layout": "^13.0.0-beta.36",
-    "@angular/forms": "^15.2.10",
-    "@angular/platform-browser": "^15.2.10",
+    "@angular/forms": "^16.2.12",
+    "@angular/platform-browser": "^16.2.12",
     "@angular/platform-browser-dynamic": "^15.2.10",
-    "@angular/router": "^15.2.10",
+    "@angular/router": "^16.2.12",
     "@nebular/eva-icons": "9.0.0",
     "@nebular/theme": "^9.0.0",
     "@ng-bootstrap/ng-bootstrap": "^11.0.0",
@@ -42,7 +42,7 @@
     "rxjs": "6.6.7",
     "token-interceptor": "^1.1.4",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "^0.13.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.10",
